--- a/codigos/CAPITULO 1 e 2/AJAX/requisicao.html
+++ b/codigos/CAPITULO 1 e 2/AJAX/requisicao.html
@@ -23,6 +23,7 @@
                 $.ajax({
                     url: searchPath,
                     cache: false,
+                    type: 'GET',
                     dataType: "xml",
                     success: function (data) {
                         $(data).find("fruit").each(
